# rust_practice

./: README.md  compose.yaml
.aws/: credentials
app/: Dockerfile
app/acitx-web-hello/: Cargo.toml
app/acitx-web-hello/src/: main.rs
app/actix-web-blog/: .env  Cargo.toml  Makefile.toml  posts.db
app/actix-web-blog/migrations/2022-12-14-062020_create_posts/: up.sql
app/actix-web-blog/src/: error.rs  main.rs  repository.rs
app/lambda-rust-test-kotama/: Cargo.toml
app/pyo3-example/: Cargo.toml  fib.py  pyproject.toml
app/pyo3-example/src/: lib.rs
app/test/: Cargo.toml
app/tutorial/: Cargo.toml
app/tutorial/src/: main.rs
app/yew-blog/: Cargo.toml
app/yew-blog/src/: main.rs
