[package]
name = "actix-web-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.66"
diesel = { version = "2.0.2", features = ["r2d2", "returning_clauses_for_sqlite_3_35", "sqlite"] }
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
serde = { version = "1.0.150", features = ["derive"] }
thiserror = "1.0.37"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
