[package]
name = "yew-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
gloo-net = "0.2.5"
serde = { version = "1.0.150", features = ["derive"] }
wasm-bindgen-futures = "0.4.33"
yew = { version = "0.20.0", features = ["csr"] }
